--- a/jqueryToDoListProject/jquerytodolist.html
+++ b/jqueryToDoListProject/jquerytodolist.html
@@ -5,16 +5,17 @@
 
     <link rel="stylesheet" type="text/css" href="Assets/css/jquerytodolist.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
 </head>
 <body>
     <div id="container">
-        <h1>To-do List<i class="fas fa-plus"> </i>  </h1>
+        <h1>To-do List <i class="fas fa-plus"> </i> </h1>
         <input type="text" placeholder="Add New Todo">
         <ul>
-            <li><span>X</span> train pet dragon</li>
-            <li><span>X</span> vacation to the bottom of the ocean</li>
-            <li><span>X</span> stroll on jupiter</li>
+            <li><span><i class="fas fa-trash"></i></span> train pet dragon</li>
+            <li><span><i class="fas fa-trash"></i></span> vacation to the bottom of the ocean</li>
+            <li><span><i class="fas fa-trash"></i></span> stroll on jupiter</li>
         </ul>
     </div>
     <script type="text/javascript" src="Assets/js/lib/jquery-3.3.1.min.js"></script>
